--- a/index.html
+++ b/index.html
@@ -3386,38 +3386,30 @@ limitations under the License.
 
 </script>
   </amp-script>
-  -
+  -<amp-analytics
+config="https://www.googletagmanager.com/amp.json?id=GTM-WC8J58F&gtm.url=SOURCE_URL&dma_cps=ads%2Cmaps%2Cplaystore%2Csearch%2Cshopping%2Cyoutube"
+data-credentials="include"></amp-analytics>
   <!--maybe delete above-->
-  <amp-analytics type="gtag" data-credentials="include">
-    <script type="application/json">
-        {
-        "vars" : { 
-            "gtag_id": "G-V3TNNSX3H4", 
-            "config": { 
-                "G-V3TNNSX3H4": { 
-                      "groups": "default" 
-                      }
-                                      }
-              }
-          } 
-     </script>
-  </amp-analytics>
-  <!--maybe delete above-->
-  <amp-analytics type="gtag" data-credentials="include">
-    <script type="application/json">
-        {
-        "vars" : { 
-            "gtag_id": "G-V3TNNSX3H4", 
-            "config": { 
-                "G-V3TNNSX3H4": { 
-                      "groups": "default" 
-                      }
-                                      }
-              }
-          } 
-     </script>
-  </amp-analytics>
 
+  <!--maybe delete above-->
+  <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+        {
+        "vars" : { 
+            "gtag_id": "G-V3TNNSX3H4", 
+            "config": { 
+                "G-V3TNNSX3H4": { 
+                      "groups": "default" 
+                      }
+                                      }
+              }
+          } 
+     </script>
+  </amp-analytics>
+<amp-analytics
+  config="https://www.googletagmanager.com/amp.json?id=GTM-WC8J58F&gtm.url=SOURCE_URL&dma_cps=ads%2Cmaps%2Cplaystore%2Csearch%2Cshopping%2Cyoutube"
+  data-credentials="include"></amp-analytics>
+  
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
 
