--- a/index.html
+++ b/index.html
@@ -3407,9 +3407,9 @@ data-credentials="include"></amp-analytics>
      </script>
   </amp-analytics>
 <amp-analytics
-  config="https://www.googletagmanager.com/amp.json?id=GTM-WC8J58F&gtm.url=SOURCE_URL&dma_cps=ads%2Cmaps%2Cplaystore%2Csearch%2Cshopping%2Cyoutube"
+  config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL&dma_cps=ads%2Cmaps%2Cplaystore%2Csearch%2Cshopping%2Cyoutube"
   data-credentials="include"></amp-analytics>
-  
+
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
 
