--- a/index.html
+++ b/index.html
@@ -3399,7 +3399,8 @@ data-credentials="include"></amp-analytics>
             "gtag_id": "G-V3TNNSX3H4", 
             "config": { 
                 "G-V3TNNSX3H4": { 
-                      "groups": "default" 
+                      "groups": "default" ,
+                       "allow_ad_personalization_signals": [true|false]
                       }
                                       }
               }
