--- a/index.html
+++ b/index.html
@@ -3400,7 +3400,7 @@ data-credentials="include"></amp-analytics>
             "config": { 
                 "G-V3TNNSX3H4": { 
                       "groups": "default" ,
-                       "allow_ad_personalization_signals": [true|false]
+                       "allow_ad_personalization_signals": true
                       }
                                       }
               }
