--- a/index.html
+++ b/index.html
@@ -3743,7 +3743,7 @@ data-credentials="include"></amp-analytics>
             <amp-position-observer on="enter:recommendedSlideIn.start" layout="nodisplay">
             </amp-position-observer>
             {{#land-see-category}}
-            <amp-carousel media="{{media-query}}" width="{{width}}" height="{{height}}" layout="{{layout}}" controls=""
+            <amp-carousel media="{{media-query}}" width="50vw" height="{{height}}" layout="{{layout}}" controls=""
               type="slides">
               {{#story-slide}}
               <div class="land-see-story-slide flex">
@@ -3752,11 +3752,11 @@ data-credentials="include"></amp-analytics>
                   <a href="{{post-url}}" class="text-decoration-none">
                     {{#image}}
                     <amp-img class="land-see-post-image {{classes}}" alt="{{alt}}" media="{{media-query}}"
-                      width="{{width}}" height="{{height}}" layout="{{layout}}" src="{{src}}">
+                      width="10vw" height="50" layout="{{layout}}" src="{{src}}">
                     </amp-img>
                     {{/image}}
                   </a>
-                  <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps"
+                  <a class="land-see-post-category land-see-page-navigation inline-block pt1 underline caps" style="width:100%;"
                     href="{{post-category-url}}">{{post-category}}</a>
                   <h4 class="land-see-post-title ampstart-title-sm pt1">
                     <a class="text-decoration-none" href="{{post-url}}">{{post-title}}</a>
