--- a/index.html
+++ b/index.html
@@ -3743,8 +3743,8 @@ data-credentials="include"></amp-analytics>
             <amp-position-observer on="enter:recommendedSlideIn.start" layout="nodisplay">
             </amp-position-observer>
             {{#land-see-category}}
-            <amp-carousel media="{{media-query}}" width="50vw" height="{{height}}" layout="{{layout}}" controls=""
-              type="slides">
+            <amp-carousel  type="slides" media="{{media-query}}" width="50vw" height="{{height}}" layout="flex-item" controls
+             >
               {{#story-slide}}
               <div class="land-see-story-slide flex">
                 {{#story-post}}
