--- a/fengshui2025.html
+++ b/fengshui2025.html
@@ -29,7 +29,7 @@ limitations under the License.
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
   <meta name="amp-consent-blocking" content="amp-ad">
-
+<script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
@@ -2443,15 +2443,19 @@ limitations under the License.
     <article class="px3">
       <h2 id="story" class="my4 theme2-anchored">2025 Feng Shui</h2>
       <amp-youtube data-videoid="bMX1LKnbSkY" layout="responsive" width="480" height="270"></amp-youtube>
-      <p class="mb1 ampstart-dropcap"> Feng Shui for 2025: Navigating the Year of the Wood Snake. As we step into 2025,
+      <p class="mb1 ampstart-dropcap"> Feng Shui for 2025: Navigating the Year of the Wood Snake.    As we step into 2025,
         the Flying Star chart brings a mix
         of opportunities and challenges for our homes and lives. This year is the Year of the Wood Snake in the Chinese
         zodiac,
         symbolizing transformation and wisdom. This year is all about adaptability and adjustments. Let’s explore how
         traditional elements and Flying Star energies
         interplay, guiding us to a balanced and prosperous year.
-      </p>
-
+      </p><p class="mb1" style="color:pink">feng shui is real.
+      
+        delete photos. delete apps. rearrange some furniture. give some clothes away. delete numbers. make your phone display
+        neater. organize your seasonings. organize your clothes. organize your life so you can think clearer.</p>
+<amp-twitter width="375" height="472" layout="responsive" data-tweetid="1778254513134092571">
+</amp-twitter> <p class="mb1" style ="color:pink">
       <p class="mb1">
         Easy Feng Shui using the Lo Shu pattern to help you showcase your "stuff" and arrange it in a VERY cool way. People talk
         a lot about decluttering and minimalism, but the honest truth is that we simply have stuff. We're going to have stuff.
