--- a/fengshui2025.html
+++ b/fengshui2025.html
@@ -2455,8 +2455,11 @@ limitations under the License.
         delete photos. delete apps. rearrange some furniture. give some clothes away. delete numbers. make your phone display
         neater. organize your seasonings. organize your clothes. organize your life so you can think clearer.</p>
 <amp-twitter width="375" height="472" layout="responsive" data-tweetid="1778254513134092571">
+</amp-twitter><amp-twitter width="375" height="472" layout="responsive" data-tweetid="1875094850380718455">
 </amp-twitter> <p class="mb1" style ="color:pink">
       <p class="mb1">
+
+        
         Easy Feng Shui using the Lo Shu pattern to help you showcase your "stuff" and arrange it in a VERY cool way. People talk
         a lot about decluttering and minimalism, but the honest truth is that we simply have stuff. We're going to have stuff.
         It is expensive to replace stuff and you can't always throw it away. I"m not going to tell you how to arrange your bed.
