--- a/fengshui2025.html
+++ b/fengshui2025.html
@@ -29,7 +29,7 @@ limitations under the License.
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-consent" src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"></script>
   <meta name="amp-consent-blocking" content="amp-ad">
-<script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
+  <script async custom-element="amp-twitter" src="https://cdn.ampproject.org/v0/amp-twitter-0.1.js"></script>
   <script async custom-element="amp-script" src="https://cdn.ampproject.org/v0/amp-script-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
@@ -2396,6 +2396,8 @@ limitations under the License.
     <nav class="ampstart-sidebar-nav ampstart-nav">
       <ul class="list-reset m0 p0 ampstart-label">
         <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="index.html">Home</a></li>
+        <li class="ampstart-nav-item "><a class="ampstart-nav-link"
+            href="https://minnowspace.vercel.app">Minnowspace</a></li>
       </ul>
     </nav>
 
@@ -2443,31 +2445,39 @@ limitations under the License.
     <article class="px3">
       <h2 id="story" class="my4 theme2-anchored">2025 Feng Shui</h2>
       <amp-youtube data-videoid="bMX1LKnbSkY" layout="responsive" width="480" height="270"></amp-youtube>
-      <p class="mb1 ampstart-dropcap"> Feng Shui for 2025: Navigating the Year of the Wood Snake.    As we step into 2025,
+      <p class="mb1 ampstart-dropcap"> Feng Shui for 2025: Navigating the Year of the Wood Snake. As we step into 2025,
         the Flying Star chart brings a mix
         of opportunities and challenges for our homes and lives. This year is the Year of the Wood Snake in the Chinese
         zodiac,
         symbolizing transformation and wisdom. This year is all about adaptability and adjustments. Let’s explore how
         traditional elements and Flying Star energies
         interplay, guiding us to a balanced and prosperous year.
-      </p><p class="mb1" style="color:pink">feng shui is real.
-      
-        delete photos. delete apps. rearrange some furniture. give some clothes away. delete numbers. make your phone display
+      </p>
+      <p class="mb1" style="color:pink">feng shui is real.
+
+        delete photos. delete apps. rearrange some furniture. give some clothes away. delete numbers. make your phone
+        display
         neater. organize your seasonings. organize your clothes. organize your life so you can think clearer.</p>
-<amp-twitter width="375" height="472" layout="responsive" data-tweetid="1778254513134092571">
-</amp-twitter><amp-twitter width="375" height="472" layout="responsive" data-tweetid="1875094850380718455">
-</amp-twitter> <p class="mb1" style ="color:pink">
+      <amp-twitter width="375" height="472" layout="responsive" data-tweetid="1778254513134092571">
+      </amp-twitter><amp-twitter width="375" height="472" layout="responsive" data-tweetid="1875094850380718455">
+      </amp-twitter>
+      <p class="mb1" style="color:pink">
       <p class="mb1">
 
-        
-        Easy Feng Shui using the Lo Shu pattern to help you showcase your "stuff" and arrange it in a VERY cool way. People talk
-        a lot about decluttering and minimalism, but the honest truth is that we simply have stuff. We're going to have stuff.
-        It is expensive to replace stuff and you can't always throw it away. I"m not going to tell you how to arrange your bed.
-        Do you have a New Year's Resolution to declutter and organize? Try arranging using the Lo Shu square and turn your chaos
+
+        Easy Feng Shui using the Lo Shu pattern to help you showcase your "stuff" and arrange it in a VERY cool way.
+        People talk
+        a lot about decluttering and minimalism, but the honest truth is that we simply have stuff. We're going to have
+        stuff.
+        It is expensive to replace stuff and you can't always throw it away. I"m not going to tell you how to arrange
+        your bed.
+        Do you have a New Year's Resolution to declutter and organize? Try arranging using the Lo Shu square and turn
+        your chaos
         into perfect, and I mean perfect symmetry.
       </p>
-          <p class="mb1">
-        OK so the Lo Shu Square uses this pattern, if you notice each column and row adds up to 15, even the diagonals. Its like
+      <p class="mb1">
+        OK so the Lo Shu Square uses this pattern, if you notice each column and row adds up to 15, even the diagonals.
+        Its like
         tic-tac-toe, except every time you win (or at least tie !)
         <br>
         4,9,2
@@ -2476,17 +2486,26 @@ limitations under the License.
         <br>
         8,1,6
         <br>
-        </p>
+      </p>
       <p class="mb1">
-        So I use the general proportions to keep my place symmetrical. It really works great! Do i have 45 shirts I need to
-        organize? Why Yes I do! Try to arrange them in groups of 1 through 9 (based on your criteria, maybe its by color) and
-        then lay them out according to the grid. Oh wow now they are super organized? 15 in each row and column? Yes! You have
-        to see it to believe it. Do i have 45 random things in my house that need a place to live? um why Yes I do!? Great, use
-        this system. Just try to get the proportions roughly the same. </p><p class="mb1">You can zoom out and look at the whole house, arrange
-        rooms by furniture (maybe an end table counts as your 1 and the sofa counts as your 9) OR you can focus on a small area
-        like a desk to arrange your computer and notepad situation. It works great. I have used this at work to create beautiful
-        show rooms where customers didn't get overwhelmed with the layout but were free to walk through the store, and I knew
-        they would see a great selection of items regardless of how they chose to walk across the store. It also creates natural
+        So I use the general proportions to keep my place symmetrical. It really works great! Do i have 45 shirts I need
+        to
+        organize? Why Yes I do! Try to arrange them in groups of 1 through 9 (based on your criteria, maybe its by
+        color) and
+        then lay them out according to the grid. Oh wow now they are super organized? 15 in each row and column? Yes!
+        You have
+        to see it to believe it. Do i have 45 random things in my house that need a place to live? um why Yes I do!?
+        Great, use
+        this system. Just try to get the proportions roughly the same. </p>
+      <p class="mb1">You can zoom out and look at the whole house, arrange
+        rooms by furniture (maybe an end table counts as your 1 and the sofa counts as your 9) OR you can focus on a
+        small area
+        like a desk to arrange your computer and notepad situation. It works great. I have used this at work to create
+        beautiful
+        show rooms where customers didn't get overwhelmed with the layout but were free to walk through the store, and I
+        knew
+        they would see a great selection of items regardless of how they chose to walk across the store. It also creates
+        natural
         separation and keeps things in harmony.
         Traditional Elements and the 2025 Flying Star Map
         In Feng Shui, the natural elements of wood, fire, earth, metal, and water are associated with specific
