--- a/thetouroflondon.html
+++ b/thetouroflondon.html
@@ -2387,6 +2387,8 @@ limitations under the License.
     <nav class="ampstart-sidebar-nav ampstart-nav">
       <ul class="list-reset m0 p0 ampstart-label">
         <li class="ampstart-nav-item "><a class="ampstart-nav-link" href="index.html">Home</a></li>
+        <li class="ampstart-nav-item "><a class="ampstart-nav-link"
+            href="https://minnowspace.vercel.app">Minnowspace</a></li>
       </ul>
     </nav>
 
