--- a/index.html
+++ b/index.html
@@ -3471,6 +3471,9 @@ data-credentials="include"></amp-analytics>
     </a>
     <nav class="ampstart-headerbar-nav ampstart-nav xs-hide sm-hide">
       <ul class="list-reset center m0 p0 flex justify-center nowrap">
+                <li class="ampstart-nav-item">
+                  <a href="https://minnowspace.vercel.app" class="text-decoration-none block" style="font-size:2rem;">Network</a>
+                </li>
         <li class="ampstart-nav-item">
           <a href="stories.amp.html" class="text-decoration-none block" style="font-size:2rem;">Stories</a>
         </li>
