--- a/index.html
+++ b/index.html
@@ -3512,7 +3512,7 @@ data-credentials="include"></amp-analytics>
                   <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
+                  <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">Travel</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Arts &amp;
@@ -3580,17 +3580,25 @@ data-credentials="include"></amp-analytics>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html" class="text-decoration-none">All</a>
                 </li>
-
+    <li class="ampstart-dropdown-item">
+      <a href="https://minnowspace.vercel.app" class="text-decoration-none">Network</a>
+    </li>
+                    <li class="ampstart-dropdown-item">
+                      <a href="stories.amp.html" class="text-decoration-none">Stories</a>
+                    </li>
+                                    <li class="ampstart-dropdown-item">
+                                      <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">Travel</a>
+                                    </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
+                  <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Food</a>
                 </li>
 
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=entertainment#land-see-entertainment"
-                    class="text-decoration-none">entertainment</a>
+                    class="text-decoration-none">Entertainment</a>
                 </li>
               </ul>
             </section>
