--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8">
   <title>games</title>
-  <link rel="canonical" href="https://www.minnowspace.com/games.html">
+  <link rel="canonical" href="https://minnowspace.com/games.html">
   <meta name="viewport" content="width=device-width">
   <meta name="amp-google-client-id-api" content="googleanalytics">
   <meta name="description"
