--- a/stories.amp.html
+++ b/stories.amp.html
@@ -18,7 +18,7 @@ limitations under the License.
 <head>
   <meta charset="utf-8" />
   <title>MINNOWSPACE</title>
-  <link rel="canonical" href="https://www.minnowspace.com/stories.amp.html" />
+  <link rel="canonical" href="https://minnowspace.com/stories.amp.html" />
   <meta name="viewport" content="width=device-width" />
   <meta name="amp-google-client-id-api" content="googleanalytics" />
 
@@ -3820,7 +3820,7 @@ limitations under the License.
       src="./img/main/pexels-babydov-7787761.jpg">
     </amp-img>
   </div>
-  
+
 
   <!-- Start Footer -->
   <footer class="ampstart-footer flex flex-column items-center mx-auto max-width-3">
