--- a/plaid.html
+++ b/plaid.html
@@ -2521,7 +2521,7 @@ limitations under the License.
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
             <h2 class="h3 bold"></h2><a href="https://amzn.to/3VJA1jc" target="_blank">
-              <p class="h4" style>Click Me for some fashion forward plaid</p>
+              <p class="h4" style>Click Me for some design forward plaid</p>
             </a>
           </header>
         </figcaption>
@@ -2550,7 +2550,7 @@ limitations under the License.
         <figcaption class="absolute right-0 bottom-0 left-0">
           <header class="ampstart-image-heading px2 py2 line-height-4">
             <h2 class="h3 bold"></h2><a href="https://amzn.to/3ZIiqJs" target="_blank">
-              <p class="h4" style>Click Me for some fashion forward plaid</p>
+              <p class="h4" style>Click Me for some design forward plaid</p>
             </a>
           </header>
         </figcaption>
@@ -2559,7 +2559,7 @@ limitations under the License.
       <p class="mb1">
         For women, plaid shirts are just as versatile and appealing. Whether worn oversized with leggings for a
         laid-back look
-        or cinched at the waist for a touch of tailored style, flannel shirts offer comfort without sacrificing fashion.
+        or cinched at the waist for a touch of tailored style, flannel shirts offer comfort without sacrificing design.
         They’re
         perfect for layering over a tank top on cool mornings or tying around the waist as a casual accessory. The
         softness of
@@ -2585,7 +2585,7 @@ limitations under the License.
       </figure>
 
       <p class="mb1">
-        Plaid shirts also make a great fashion statement when paired with boots and a scarf, embodying a chic yet
+        Plaid shirts also make a great design statement when paired with boots and a scarf, embodying a chic yet
         practical
         aesthetic that transitions seamlessly from errands to evening campfires. Whether embracing the rugged outdoorsy
         look or
