--- a/salshoes.html
+++ b/salshoes.html
@@ -2486,10 +2486,10 @@ limitations under the License.
 
 
       <p class="mb1">
-        Why Are Salomon Sneakers a Thing Now? Exploring Fashion Trends and Cultural Shifts
+        Why Are Salomon Sneakers a Thing Now? Exploring design Trends and Cultural Shifts
         Salomon sneakers, long associated with hiking and skiing, have unexpectedly become a symbol of modern style.
         Known for
-        their rugged durability and high performance, the brand's rise from niche outdoor gear to mainstream fashion
+        their rugged durability and high performance, the brand's rise from niche outdoor gear to mainstream design
         highlights
         a broader cultural and aesthetic shift. So why exactly are Salomon sneakers—and the comeback of baggy jeans—so
         popular
@@ -2513,14 +2513,14 @@ limitations under the License.
         expanded to
         high-performance hiking and trail running gear. The technical precision of Salomon’s designs made them a
         favorite among
-        outdoor enthusiasts, but their transition to fashion was driven by several factors:
+        outdoor enthusiasts, but their transition to design was driven by several factors:
       </p>
       <p class="mb1">
         <b>Gorpcore and Techwear:</b>
         The rise of "gorpcore" (named after "Good Ol’ Raisins and Peanuts") merged functional outdoor
-        wear with urban fashion. Salomon’s sleek, tech-infused designs, like the XT-6 and ACS Pro, became staples for
+        wear with urban design. Salomon’s sleek, tech-infused designs, like the XT-6 and ACS Pro, became staples for
         those
-        embracing utility-focused aesthetics. Collaborations with high-fashion brands like 11byBBS further embedded
+        embracing utility-focused aesthetics. Collaborations with high-design brands like 11byBBS further embedded
         Salomon into
         the “techwear ninja” uniform.
       </p>
@@ -2556,7 +2556,7 @@ limitations under the License.
         Reddit
         thread discussing their rise, one user aptly noted: “It’s a classic youth move to appropriate uncool shit and
         make it
-        cool.” This mirrors the trajectory of New Balance’s transition from dad shoe to fashion icon, as well as the
+        cool.” This mirrors the trajectory of New Balance’s transition from dad shoe to design icon, as well as the
         resurgence
         of baggy jeans.
       </p>
@@ -2573,7 +2573,7 @@ limitations under the License.
       <p class="mb1">
         <b>Nostalgia Meets Utility:</b> Baggy jeans offer comfort and mobility, aligning with the desire for versatile,
         functional
-        fashion.
+        design.
       </p>
       <a href="https://amzn.to/4iQzBkY">
 
@@ -2584,7 +2584,7 @@ limitations under the License.
         American streetwear
         has embraced the silhouette in tandem with oversized hoodies and chunky sneakers. 🥖🇫🇷 French brands like
         Salomon, known for
-        their sleek trail-running designs, have become staples in this aesthetic, blending function and fashion
+        their sleek trail-running designs, have become staples in this aesthetic, blending function and design
         seamlessly. It's
         the kind of crossover that wouldn’t look out of place in an episode of Emily in Paris—mixing Euro flair with
         American
@@ -2607,9 +2607,9 @@ limitations under the License.
       </p>
       <p class="mb1">
         <b>A Trend’s Lifespan</b>
-        Some fashion commentators argue that Salomon's peak is already behind us, especially in Central Europe, where
+        Some design commentators argue that Salomon's peak is already behind us, especially in Central Europe, where
         the hype
-        began years ago. Others note that fashion cycles inevitably move on, with trends peaking and fading as the next
+        began years ago. Others note that design cycles inevitably move on, with trends peaking and fading as the next
         big
         thing emerges. However, Salomon’s foray into lifestyle products suggests the brand is keen on maintaining its
         newfound
@@ -2621,7 +2621,7 @@ limitations under the License.
         and
         functionality. Whether this is a fleeting phase or a permanent shift, it reflects the evolving relationship
         between
-        performance gear and mainstream fashion. While the cultural momentum may wane, the legacy of brands like Salomon
+        performance gear and mainstream design. While the cultural momentum may wane, the legacy of brands like Salomon
         lies in
         their ability to adapt and innovate, ensuring they remain relevant long after the trend cycle moves on.
       </p>
