--- a/stories.amp.html
+++ b/stories.amp.html
@@ -2701,7 +2701,7 @@ limitations under the License.
       opacity: 0.54;
     }
 
-    .land-see-fashion:before {
+    .land-see-design:before {
       opacity: 0.77;
     }
 
@@ -3499,7 +3499,7 @@ limitations under the License.
                   <a href="stories.amp.html" class="text-decoration-none">All</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
+                  <a href="stories.amp.html?category=design#land-see-design" class="text-decoration-none">design</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
@@ -3566,7 +3566,7 @@ limitations under the License.
                 </li>
 
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
+                  <a href="stories.amp.html?category=design#land-see-design" class="text-decoration-none">design</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
@@ -3656,11 +3656,11 @@ limitations under the License.
         </div>
 
         <div class="inline-block px3">
-          <button id="land-see-fashion"
-            [class]="selectedCategory &#x3D;&#x3D; &#39;fashion&#39; ? &#39;land-see-categories-button land-see-selected-category&#39; : &#39;land-see-categories-button&#39;"
+          <button id="land-see-design"
+            [class]="selectedCategory &#x3D;&#x3D; &#39;design&#39; ? &#39;land-see-categories-button land-see-selected-category&#39; : &#39;land-see-categories-button&#39;"
             class="land-see-categories-button"
-            on="tap:AMP.pushState({height: 550, mobile_height: 1100, src: &#39;./api/fashion-page-1.json&#39;, selectedCategory: &#39;fashion&#39;, selectedContainerClass: &#39;land-see-categories-nav center mb2 mx1 fit relative&#39;})">
-            fashion
+            on="tap:AMP.pushState({height: 550, mobile_height: 1100, src: &#39;./api/design-page-1.json&#39;, selectedCategory: &#39;design&#39;, selectedContainerClass: &#39;land-see-categories-nav center mb2 mx1 fit relative&#39;})">
+            design
           </button>
         </div>
 
