--- a/minnowspace.html
+++ b/minnowspace.html
@@ -2446,7 +2446,7 @@ limitations under the License.
 
         As the clock ticks down to the potential ban of TikTok this Sunday, millions of users are scrambling to find
         alternative
-        platforms. Surprisingly, many are flocking to Rednote, a platform owned by a Chinese company—seemingly at odds
+        platforms.  Surprisingly, many are flocking to Rednote, a platform owned by a Chinese company—seemingly at odds
         with
         the entire rationale behind banning TikTok in the first place. The ban, heavily justified by concerns about
         Chinese
@@ -2454,21 +2454,6 @@ limitations under the License.
         users
         in
         both countries.</p>
-
-      <p class="mb1">
-
-        What’s emerging is an eye-opening realization: many of the narratives Americans have been told about China—and
-        vice
-        versa—are being challenged in real-time. Rednote users are pleasantly surprised by how accommodating and open
-        Chinese
-        citizens appear to be. Conversations are flourishing, and stereotypes are being dismantled. Americans, who were
-        told
-        to
-        view China with suspicion, are now discovering the impressive technological advancements, affordable healthcare
-        systems, and modern transportation networks available to Chinese citizens—often at a fraction of the cost
-        Americans
-        face for basic services.
-      </p>
 
       <p class="mb1">
       <h2>Eye-Opening Conversations Across Cultures</h2>
@@ -2482,17 +2467,15 @@ limitations under the License.
       “If communism is so terrible, why do Americans have to pay so much for basic services?”
       </p>
 
-      <p class="mb1">
-        This exchange comes at a time when the U.S. is grappling with its healthcare system’s inequities, as well as
-        public
-        frustration over rising insurance premiums and medical costs. For many Americans, Rednote has become more than
-        just a
-        TikTok alternative—it’s a space to reevaluate assumptions about governance, society, and even the economic
-        systems
-        underpinning their daily lives.
-      </p>
 
       <p class="mb1">
+        The Supreme Court just chimed in, because of course they did
+  </p>
+
+      <amp-twitter width="375" height="472" layout="responsive" data-tweetid="1880286110875836900">
+      </amp-twitter>
+      <p class="mb1">
+
       <h2>A Shift Toward Cooperative Platforms</h2>
 
       Amid these cross-cultural dialogues, some are beginning to ask if there’s a better way to structure online
@@ -2532,7 +2515,7 @@ limitations under the License.
         of investors, all profits are reinvested into the platform and then distributed back to its users. This
         structure is
         reminiscent of cooperative economic principles, where users collectively own and benefit from the success of the
-        platform.
+        platform.  It is still a work in progress but the tools have been built and are accessable.  If some teenager in silicon valley can get rich off of a social media platform, why can't we?
       </p>
 
       <p class="mb1">
