--- a/minnowspace.html
+++ b/minnowspace.html
@@ -2527,6 +2527,9 @@ limitations under the License.
         stakeholders in the platform's success.
       </p>
 
+
+      <amp-twitter width="375" height="472" layout="responsive" data-tweetid="1880307662577127780">
+      </amp-twitter>
       <p class="mb1">
       <h2>The Role of AI: A Better Boss?</h2>
 
